# cogment-py-sdk

./: .apache-license-checker.yaml  .cogment-api.yaml  .dockerignore  .editorconfig  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  .license.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.py  integration_test.dockerfile  mypy.ini  pyproject.toml  requirements.txt  run_integrated_tests.sh  setup.cfg  setup.py
cogment/: __init__.py  actor.py  actor_class.py  agent_service.py  client.py  client_service.py  context.py  control.py  control_service.py  datalog.py  datalog_service.py  datastore.py  delta_encoding.py  directory.py  endpoints.py  env_service.py  environment.py  errors.py  generate.py  grpc_metadata.py  grpc_server.py  hooks_service.py  log_exporter_service.py  model_registry.py  model_registry_v2.py  parameters.py  prehook.py  reloader.py  server.py  session.py  test.py  trial.py  utils.py  version.py  version.py.in
cogment/tests/: blank_env_server.py  test_agent_service.py  test_client_api.py  test_env_service.py  test_grpc_server.py
cogment/tests/fixtures/: cog_settings.py  rps.proto  rps_delta.py  rps_pb2.py
scripts/: check_dependencies_conflicts.sh  commons.sh  local_build.sh  run_integration_test.sh
test/: agent_feedback.py  agent_messages.py  alt_cog_settings.py  client_feedback.py  client_messages.py  client_simple.py  cog_settings.py  cogment.yaml  data.proto  data_pb2.py  datalog.py  datalog_to_csv.py  datalog_to_postgres.py  env.py  env_feedback.py  env_main.py  env_messages.py  env_var  main.py  main_send_message.py  pseudo_orch_agent_feedback.py  pseudo_orch_agent_messages.py  pseudo_orch_client_feedback.py  pseudo_orch_client_messages.py  pseudo_orch_client_simple.py  pseudo_orch_datalog.py  pseudo_orch_env.py  pseudo_orch_env_feedback.py  pseudo_orch_env_messages.py  pseudo_orch_prehook.py  pseudo_orch_send_message.py  pseudo_orchestrator.py  pseudo_utils.py  readme.md  requirements.txt  supervisor.py  test_csv.csv
tests/: conftest.py  test_download_cogment.py  test_environment.py  test_grpc_metadata.py  test_integration.py  test_model_registry.py  test_trial.py
tests/helpers/: cogment_generate.py  download_cogment.py  find_free_port.py  launch_cogment.py  launch_orchestrator.py
tests/test_cogment_app/: cog_settings.py  cogment.yaml  data.proto  data_pb2.py  params.yaml
