[metadata]
name = cogment
version = attr: cogment.version.__version__
author = Artificial Intelligence Redefined
author_email = dev+cogment@ai-r.com
description = Cogment python SDK
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://cogment.ai
repository = https://github.com/cogment/cogment-py-sdk
project_urls =
    Reference Documentation = https://cogment.ai/docs/reference/python
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = 
    cogment
    cogment.api

python_requires = >=3.7, <3.10
install_requires =
    grpcio >=1.42, <1.45
    grpcio-reflection >=1.42, <1.45
    protobuf ~=3.7
    prometheus-client >= 0.8, <0.9

[options.extras_require]
generate = 
    PyYaml ~=5.3.1
    grpcio-tools ==1.43
    click ~= 8.0.3

[options.package_data]
* = *.proto, 

[options.data_files]
. = CHANGELOG.md

[pycodestyle]
max-line-length = 120
ignore = E127, E128, E203, W504
exclude = *pb2.py,*pb2_grpc.py,.venv*,cog_settings.py
